--- a/WebContent/css/location.css
+++ b/WebContent/css/location.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+@media (max-width: 1000px) {
+  .col-md-6{
+    text-align: center !important;
+  }
+}
 h3{text-align: center; margin-bottom: 40px !important;}
 #bus{text-align: center;}
 #locationimg{width: 100px; height: 100px}
+.mg-b100{margin-bottom: 100px}
+.col-md-6>strong{font-size: 25px}
