--- a/WebContent/css/buy.css
+++ b/WebContent/css/buy.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
-/* 회원가입 부분 */
 .buy-main{
 	text-align: center !important;
+	margin-bottom: 45px !important;
 }
 
 .buy-buy-btn{
