--- a/WebContent/css/location.css
+++ b/WebContent/css/location.css
@@ -8,5 +8,7 @@
 h3{text-align: center; margin-bottom: 40px !important;}
 #bus{text-align: center;}
 #locationimg{width: 100px; height: 100px}
+.mg-t100{margin-top: 100px}
 .mg-b100{margin-bottom: 100px}
+.fs-15px{font-size: 15px}
 .col-md-6>strong{font-size: 25px}
