--- a/WebContent/css/faq.css
+++ b/WebContent/css/faq.css
@@ -3,20 +3,20 @@
 *{
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style: none !important;
 }
 
 a{
-    text-decoration: none;
+    text-decoration: none !important;
     color: black;
 }
-.container{
-    max-width: 100%;
+.container-lg{
+    max-width: 100% !important;
     position: relative;
-    margin-top: 150px;
+	padding-top: 75px;
 }
 
-.container > h3{
+.container-lg > h3{
     text-align: center;
 }
 
@@ -87,8 +87,8 @@ a{
 }
 
 .faq-box{
-    padding-right: 45px;
-    max-width: 100%;
+    padding-right: 50px !important;
+    max-width: 100% !important;
     margin-top: 35px;
     font-size: 20px;
     line-height: 30px;
@@ -126,15 +126,15 @@ a{
   }
 
 .page-link{
-    color: rgba(0, 0, 0, 0.623);
+    color: rgba(0, 0, 0, 0.623) !important;
   }
 
 .page-link:hover{
-    color: black;
+    color: black !important;
   }
   
 .page-link:focus {
-    box-shadow: 0 0 0 0;
-    border: 1px solid rgb(29, 27, 27);
-    color: black;
+    box-shadow: 0 0 0 0 !important;
+    border: 1px solid rgb(29, 27, 27) !important;
+    color: black !important;
 }
