--- a/main_publish/css/main.css
+++ b/main_publish/css/main.css
@@ -15,6 +15,83 @@
     max-width: 100%;
 }
 
+
+/* 레이어 팝업창(#modal) 배경 스타일 적용 */
+#modal{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 100;
+}
+
+input{
+    margin-left: 50px;
+}
+label{
+    font-size: 14px;   
+}
+
+#modal.active{
+    display: block;
+}
+
+/* 레이어 팝업창 스타일 적용 */
+.modal_up{
+    width: 500px;
+    height: 540px;
+    position: fixed;
+    left: 30%;
+    top: 20%;
+    background-color: #ffffff;
+}
+
+.uptitle{
+    margin-top: 60px;
+    text-align: center;
+    line-height: 16px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.upbody{
+    padding: 30px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 30px;
+    margin-bottom: 20px;
+}
+
+.closewrap{
+    width: 100%;
+    height: 30px;
+}
+
+.closeBtn{
+    height: 25px;
+    width: 100px;
+    line-height: 20px;
+    cursor: pointer;
+    display: block;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 3px;
+    background: #960909;
+    position: absolute;
+    right: 30px;
+    bottom: 55px;
+    color: #fff;
+}
+
+#expireChk{
+    margin-left: 30px;
+}
+
+
+
 /* 배너 */
 .banner{
     width: 100%;
