--- a/WebContent/css/buy.css
+++ b/WebContent/css/buy.css
@@ -3,16 +3,25 @@
 .buy-main{
 	text-align: center !important;
 	margin-bottom: 45px !important;
+	margin-top: 5% !important;
 }
 
 .buy-buy-btn{
 	font-weight: bold !important;
-	background-color: skyblue;
+	background-color: skyblue !important;
+    margin: 5px !important;
+    padding: 5px 10px !important
 }
 
-.buy-remove-btn{
+.buy-remove-btn, .buy-back-btn{
 	font-weight: bold !important;
-	background-color: silver;
+	background-color: silver !important;
+    margin: 5px !important;
+    padding: 5px 10px !important
+}
+
+.buy-write-btn{
+	background-color: yellow !important;
 	
 }
 
