--- a/WebContent/css/faq.css
+++ b/WebContent/css/faq.css
@@ -76,7 +76,7 @@ a{
     display: inline-block;
     font-size: 13px;
     padding: 0 15px;
-    margin: 3px 0;
+    margin: 3px 3px;
     height: 30px;
     box-sizing: border-box;
     border: 1px solid #726e6e;
