서브페이지 수정 -진호

--- a/WebContent/css/subpage.css
+++ b/WebContent/css/subpage.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 .li_1{
-    width: 1439px;
-    height: 546px; 
+/*     width: 1439px; */
+/*     height: 546px;  */
     text-align: center;
     margin: 0 auto;   
 
@@ -9,7 +9,7 @@
 .box-wrap{
 
     display: flex;
-    height: 495px;
+    height: 100%;
     justify-content: space-between;
 
 
@@ -79,4 +79,8 @@ h3{
     /* padding-top: 100px; */
     padding-bottom: 200px;
    
+}
+
+img{
+	width: 100%;
 }
