--- a/WebContent/css/user.css
+++ b/WebContent/css/user.css
@@ -1,5 +1,41 @@
 @charset "utf-8";
 
+/* 초기화 */
+* {
+   margin: 0;
+   padding: 0;
+   list-style: none;
+   text-decoration: none;
+   word-break: keep-all;
+   font-family: 'Noto Sans KR', sans-serif;
+}
+
+/* 페이지 헤더 */
+.page_header{
+	width: 100%
+}
+
+/* 페이지 헤더(ID찾기) */
+.idFind_header {
+   max-width: 100%;
+   height: 300px;
+   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url('../user/images/idFind_header.jpg');
+   background-size: cover;
+   background-position: 0%;
+   margin-bottom: 100px;
+}
+
+/* 콘텐츠 상단-네이밍 */
+.comeText {
+   font-size: 30px;
+   color: #fff;
+   font-weight: 900;
+   line-height: 300px;
+   text-align: center;
+}
+
+
 /* 회원가입 부분 */
 .user-main{
 	text-align: center !important;
