--- a/WebContent/css/faq.css
+++ b/WebContent/css/faq.css
@@ -4,8 +4,38 @@
     margin: 0;
     padding: 0;
     list-style: none !important;
+    text-decoration: none  !important;
+   word-break: keep-all;
+   font-family: 'Noto Sans KR', sans-serif;
 }
 
+/* 페이지 헤더 */
+.page_header{
+	width: 100%
+}
+
+.faq_header{
+   max-width: 100%;
+   height: 300px;
+   background-size: cover;
+   background-position: 0%;
+   margin-bottom: 80px;
+   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url('/css/images/faq_header.jpg');
+}
+
+
+/* 콘텐츠 상단-네이밍 */
+.comeText {
+   font-size: 30px;
+   color: #fff;
+   font-weight: 900;
+   line-height: 300px;
+   text-align: center;
+}
+
+
+/* 기존 */
 a{
     text-decoration: none !important;
     color: black;
