--- a/WebContent/css/location.css
+++ b/WebContent/css/location.css
@@ -1,5 +1,41 @@
-@charset "UTF-8";
+@charset "utf-8";
 
+/* 초기화 */
+* {
+   margin: 0;
+   padding: 0;
+   list-style: none;
+   text-decoration: none;
+   word-break: keep-all;
+   font-family: 'Noto Sans KR', sans-serif;
+}
+
+/* 페이지 헤더 */
+.page_header{
+	width: 100%
+}
+
+.location_header{
+   max-width: 100%;
+   height: 300px;
+   background-size: cover;
+   background-position: 0%;
+   margin-bottom: 100px;
+   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url('/css/images/location_header.jpg');
+}
+
+
+/* 콘텐츠 상단-네이밍 */
+.comeText {
+   font-size: 30px;
+   color: #fff;
+   font-weight: 900;
+   line-height: 300px;
+   text-align: center;
+}
+
+/* 미디어퀴리 */
 @media (max-width: 1000px) {
   .col-md-6{
     text-align: center !important;
