--- a/WebContent/css/user.css
+++ b/WebContent/css/user.css
@@ -15,16 +15,35 @@
 	width: 100%
 }
 
-/* 페이지 헤더(ID찾기) */
-.idFind_header {
+.idFind_header, .pwFind_header, .login_header{
    max-width: 100%;
    height: 300px;
-   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url('../user/images/idFind_header.jpg');
    background-size: cover;
    background-position: 0%;
    margin-bottom: 100px;
 }
+
+
+/* 페이지 헤더 이미지 */
+/* 로그인 */
+.login_header{
+	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url('/css/images/login_header.jpg') !important;
+    margin-bottom: 20px !important;
+}
+
+/* 아이디찾기 */
+.idFind_header{
+	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url('/css/images/idFind_header.jpg') !important;
+}
+
+/* 비밀번호찾기 */
+.pwFind_header {
+   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url('/css/images/pwFind_header.jpg') !important;
+}
+
 
 /* 콘텐츠 상단-네이밍 */
 .comeText {
@@ -39,7 +58,7 @@
 /* 회원가입 부분 */
 .user-main{
 	text-align: center !important;
-	margin-top: 40px;
+/* 	margin-top: 40px; */
 	border-bottom: 1px solid grey;
 	padding-bottom: 20px;
 }
