--- a/WebContent/css/faq.css
+++ b/WebContent/css/faq.css
@@ -34,6 +34,36 @@
    text-align: center;
 }
 
+/* 글꼴 */
+	/* Q */
+.question {
+	font-size: 18px !important;
+	font-weight: bold;
+	margin-right: 20px;
+}
+
+.faq-box_question:hover{
+    color: silver !important;
+}
+
+.question_ann{
+	font-size: 18px !important;
+	font-weight: bold;
+}
+
+	/* 답변 */
+.answer {
+	font-size: 16px !important;
+	font-weight: bold;
+	margin-right: 26px;
+	color: #666;
+}
+
+.answer_ann{
+	font-size: 16px !important;
+	color: #666;
+}
+
 
 /* 기존 */
 a{
@@ -52,14 +82,14 @@ a{
 
 .faq_search_box{
     position: relative;
-    margin-left: 20px;
+    margin: 40px 10px 0px 10px;
     max-width: 98%;
-    margin-top: 40px;
     border: 3px solid #ddd;
     box-sizing: border-box;
     padding: 15px 10px;
     height: auto;
     text-align: center;
+    border-radius: 5px;
 }
 
 .form-select{
@@ -116,45 +146,59 @@ a{
     color: #444;
 }
 
+
+/* 질문박스 */
 .faq-box{
-    padding-right: 50px !important;
+/*     padding-right: 30px !important; */
     max-width: 100% !important;
     margin-top: 35px;
     font-size: 20px;
     line-height: 30px;
 }
 
-.faq-box_question:hover{
-    font-weight: bold;
+.faq-box>ul{
+	padding: 0 !important;
 }
+
 
 .faq-box_question {
     border-top: 1px solid rgba(68, 68, 68, 0.247);
     cursor:pointer;
     line-height: 30px;
-    padding-top: 15px;
+    padding: 15px 20px 0px 20px;
   }
   
   .faq-box_question::after {
+    font-size : 18px;
     content:"▼";
     float:right;
   }
   
   .faq-box > ul > li {
-    padding:10px;
+    padding: 10px 0px 10px 0px;
   }
   
   .faq-box > ul > li.hover > .faq-box_question::after {
     content:"▲";
   }
   
+  
+ /* 답변박스 */  
   .faq-box_answer {
     display:none;
-    background-color:#ddd;
-    padding:10px;
-    margin-top: 10px;
+ /*    background-color:#ddd; */
+    padding:15px 20px 15px 20px;
+    margin: 20px 20px 0px 20px;
+    border: solid 1px black;
+    border-radius: 5px;
   }
 
+
+/* 페이지 버튼 */
+
+.page_nav{
+	margin: 60px 0px 140px 0px;
+}
 .page-link{
     color: rgba(0, 0, 0, 0.623) !important;
   }
