--- a/WebContent/css/faq.css
+++ b/WebContent/css/faq.css
@@ -66,7 +66,7 @@
 
 
 /* 기존 */
-a{
+/* a{
     text-decoration: none !important;
     color: black;
 }
@@ -145,7 +145,7 @@ a{
     line-height: 28px;
     color: #444;
 }
-
+ */
 
 /* 질문박스 */
 .faq-box{
