--- a/WebContent/css/faq.css
+++ b/WebContent/css/faq.css
@@ -66,7 +66,7 @@
 
 
 /* 기존 */
-/* a{
+a{
     text-decoration: none !important;
     color: black;
 }
@@ -145,13 +145,18 @@
     line-height: 28px;
     color: #444;
 }
- */
+
+.faq_menu > a:hover{
+	background-color: #726e6e;
+	color: #fff !important;
+}
+
 
 /* 질문박스 */
 .faq-box{
 /*     padding-right: 30px !important; */
     max-width: 100% !important;
-    margin-top: 35px;
+    margin-top: 50px;
     font-size: 20px;
     line-height: 30px;
 }
