--- a/WebContent/css/user.css
+++ b/WebContent/css/user.css
@@ -15,7 +15,7 @@
 	width: 100%
 }
 
-.idFind_header, .pwFind_header, .login_header{
+.idFind_header, .pwFind_header, .login_header, .userC_header{
    max-width: 100%;
    height: 300px;
    background-size: cover;
@@ -43,6 +43,15 @@
    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
       url('/css/images/pwFind_header.jpg') !important;
 }
+
+/* 회원가입 */
+
+.userC_header{
+   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url('/css/images/pwFind_header.jpg') !important;
+   margin-bottom: 120px !important;
+}
+
 
 
 /* 콘텐츠 상단-네이밍 */
