--- a/WebContent/css/user.css
+++ b/WebContent/css/user.css
@@ -15,43 +15,16 @@
 	width: 100%
 }
 
-.idFind_header, .pwFind_header, .login_header, .userC_header{
+.userC_header{
    max-width: 100%;
    height: 300px;
    background-size: cover;
    background-position: 0%;
    margin-bottom: 100px;
-}
-
-
-/* 페이지 헤더 이미지 */
-/* 로그인 */
-.login_header{
 	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
       url('/css/images/login_header.jpg') !important;
     margin-bottom: 20px !important;
 }
-
-/* 아이디찾기 */
-.idFind_header{
-	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url('/css/images/idFind_header.jpg') !important;
-}
-
-/* 비밀번호찾기 */
-.pwFind_header {
-   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url('/css/images/pwFind_header.jpg') !important;
-}
-
-/* 회원가입 */
-
-.userC_header{
-   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url('/css/images/pwFind_header.jpg') !important;
-   margin-bottom: 120px !important;
-}
-
 
 
 /* 콘텐츠 상단-네이밍 */
@@ -63,16 +36,28 @@
    text-align: center;
 }
 
-
-/* 회원가입 부분 */
-.user-main{
-	text-align: center !important;
-/* 	margin-top: 40px; */
-	border-bottom: 1px solid grey;
-	padding-bottom: 20px;
+#wrap{
+	margin-top: 80px;
 }
 
 
+/* 회원가입 부분 */
+/* .user-main{
+	text-align: center !important;
+	margin-top: 40px;
+	border-bottom: 1px solid grey;
+	padding-bottom: 20px;
+} */
+
+/* 버튼/버튼글씨  */
+
+.btn_text{
+	font-size: 16px !important;
+	line-height: 30px !important;
+	margin : 0 !important;
+	font-weight: 500;
+	font-family: Noto Sans KR', sans-serif;
+}
 
 .user-post-btn{
     background-color: black !important;
@@ -84,86 +69,238 @@
 }
 
 .user-back-btn{
-	background-color: silver !important;
+	width : 120px !important;  
+	height: 50px !important;
+	background-color: #fff !important;
+	border: 1px solid black !important;
+	border-radius: 5px !important;
 }
 
 .user-submit-btn{
-	background-color: skyblue !important;
-}
-
-.user-kakao-btn{
-	list-style: none;	
-	margin: 0 !important;
-	padding: 0 !important;
-}
-
-/* 카카오 로그인 버튼(이미지x) */
-.kakao-btn{
-	width: 100% !important;
-	height: 50px !important;
-	font-size : 16px !important;
-	background-color: #fee500;
-}
-
-.kakao-btn:hover{
-	color : #000 !important;
-}
-
-.kakao-btn:active{
-	border: none !important;
+	width : 120px !important;  
+	height: 50px !important;	
+	background-color: black !important;
+	color: #fff !important;
+	font-weight: 900 !important;
 }
 
 
-/* 로그인 부분 */
-.user-find{
-	text-align: center;
-	margin-top: 20px;
-}
-
-.user-find a{
-	text-decoration: none !important;
-	font-size : 14px !important;
-}
-
-.user-login-btn{
-	background-color: black !important;	
-	height: 50px !important;
-	color : #fff !important;
-	font-size : 16px !important;
-}
-
-.user-kakao-btn{
-	display: block !important;
-}
-
-.kakao-btn{
-	background-color: #fee500 !important;
-	width : 100% !important;
-	height: 50px !important;
-}
-
-
-/* 아이디찾기/비밀번호찾기 */
-.email-group{
-	margin-top: 20%;
-}
-
-.id-group{
-	margin-top: 20%;
-}
-
-
-/* 아이디 비빌먼호 창 높이*/
+/* 창 높이*/
 .form-control{
 	height: 50px;
+	margin-top: 8px;
+}
+
+.control-label{
+	width: 0px;
+	height: 0px;
 }
 
 
-/* 아이디,비밀번호 찾기/회원가입 글자 색상+호버링*/
-.form-group>span>a{
-	color: #999 !important;
+.btn_box{
+	padding-left: 20%;
+	margin:100px 0px 140px 0px;
 }
 
-.form-group>span>a:hover {
-	color: #000 !important;
+#container {
+   max-width: 768px;
+   height: 100%;
+   margin: 0 auto;
 }
+
+.q1,
+.q2,
+.q3 {
+   margin-left: 20px;
+}
+
+.q1{
+   margin-top: 60px;
+}
+
+/* 로고 */
+
+h1 > a > img {
+   width: 150px;
+   float: left;
+   padding-top: 15px;
+}
+
+
+
+/* 네비게이션 */
+#nav {
+   height: 80px;
+   max-width: 700px;
+   float: right;
+}
+
+#nav > ul > li {
+   float: left;
+   margin-left: 50px;
+   line-height: 80px;
+}
+
+#nav li a {
+   color: #cccccc;
+}
+
+#nav li a:hover {
+   color: #a60000;
+   font-weight: 700;
+}
+
+/* 배너 */
+
+#naming{
+   font-size: 18px;
+   font-weight: 700;
+   margin-bottom: 6px !important;
+}
+
+
+#banner {
+   clear: both;
+   width: 100%;
+   height: 300px;
+   background-image: url("../resources/minji/images/01.jpg");
+   background-size: cover;
+   background-position: 0%;
+}
+
+.control-label{
+	height: 0px !important;
+}
+
+/* 컨텐츠 */
+
+
+input {
+   width: 400px;
+   height: 50px;
+   margin-top: 10px;
+   padding-left: 10px;
+}
+
+
+
+
+#sample6_postcode{
+   width: 100px;
+}
+
+#found{
+   width: 100px;
+   height: 50px;
+   padding: 2px 0px 2px 0px;
+   margin: 0px 0px 0px 10px;
+   border: none;
+   background-color: #A60000;
+   color: #fff;
+   font-weight: 500;
+}
+
+label {
+    display: inline !important;
+}
+
+.box2{
+	margin-bottom: 5px !important;
+}
+
+#main {
+   max-width: 460px;
+   min-width: 250px;
+   margin: 0 auto;
+   margin-top: 20px;
+}
+
+/* 이메일 */
+
+#email1{
+   width: 200px;
+   margin-left: 5px;
+}
+#email2{
+   margin-right: 5px;
+   width: 170px; 
+   height: 50px;
+   padding-left: 10px;
+   font-family: inherit;  
+   border-radius: 0px; 
+   -webkit-appearance: none; 
+   -moz-appearance: none;
+   appearance: none;
+   margin-right: 5px;
+}
+
+/* 전화번호 */
+#phoneCd{
+
+   width: 110px !important; 
+   height: 50px !important;
+   margin-right: 5px;
+/*    padding-left: 10px;
+   font-family: inherit;  
+   border-radius: 0px; 
+   -webkit-appearance: none; 
+   -moz-appearance: none;
+   appearance: none;
+   margin-top: 10px; */
+}
+
+#phone1, #phone2{
+   width: 138px; 
+   height: 50px;
+}
+#phone1{
+   margin: 0px 5px 0px 5px;
+}
+
+#phone2{
+   margin: 0px 0px 0px 5px;
+}
+
+.box {
+   max-width: 460px;
+   margin-bottom: 40px;
+}
+
+.box2 {
+   max-width: 460px;
+   margin-bottom: 0px;
+}
+
+.box_tel{
+	display: inline-block;
+}
+
+
+/* 주소 */
+#postNum1{
+	width: 120px !important;
+	display: inline-block;
+	margin-right: 6px;
+}
+
+.find_btn{
+	width: 120px !important;
+	display: inline-block;
+	margin-bottom: 6px !important;
+}
+
+.add_label{
+	width: 0px !important;
+	height: 0px !important;
+}
+
+textarea {
+   width: 390px;
+   height: 50px;
+   resize: none;
+   padding: 10px 10px 10px 10px;
+   margin-top: 10px;
+}
+
+
+
