--- a/WebContent/css/buy.css
+++ b/WebContent/css/buy.css
@@ -14,7 +14,11 @@
 	width: 100%
 }
 
-.buyList_header, .confirmR_header{
+h4{
+	margin: 140px 0px 80px 0px !important;
+}
+
+.buyList_header, .confirmR_header, .cartList_header, .page_header{
    max-width: 100%;
    height: 300px;
    background-size: cover;
@@ -32,6 +36,16 @@
       url('/css/images/login_header.jpg');
 }
 
+.cartList_header{
+	   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url('/css/images/login_header.jpg');	
+}
+
+.page_header{
+	   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url('/css/images/login_header.jpg');	
+}
+
 
 /* 콘텐츠 상단-네이밍 */
 .comeText {
@@ -42,6 +56,19 @@
    text-align: center;
 }
 
+.div_btn{
+	margin: 0 auto !important;
+}
+
+.back_btn{
+	margin: 80px 0px 140px 0px !important;
+	background-color: black !important;
+    color : #fff !important;
+    border: 1px solid black;
+    font-weight: bold !important;
+    font-size : 16px !important;
+    height: 50px !important;
+}
 
 /* 원본 */
 .buy-main{
@@ -52,14 +79,17 @@
 
 .buy-buy-btn{
 	font-weight: bold !important;
-	background-color: skyblue !important;
+	background-color: #000 !important;
+	color: #fff !important;
+	border: 1px solid black !important;
     margin: 5px !important;
     padding: 5px 10px !important
 }
 
 .buy-remove-btn, .buy-back-btn{
 	font-weight: bold !important;
-	background-color: silver !important;
+	background-color: #fff !important;
+    border: 1px solid black !important;	
     margin: 5px !important;
     padding: 5px 10px !important
 }
