--- a/WebContent/css/buy.css
+++ b/WebContent/css/buy.css
@@ -9,13 +9,36 @@
    font-family: 'Noto Sans KR', sans-serif;
 }
 
+.q1{
+	margin: 0 auto !important;	
+}
+
+.btn_box{
+	text-align: center !important;
+}
+
+
+
 /* 페이지 헤더 */
 .page_header{
 	width: 100%
 }
 
-h4{
-	margin: 140px 0px 80px 0px !important;
+h5{
+	margin: 20px 0px 80px 0px !important;
+	font-weight: 300 !important;
+	color: #828282!important;
+	line-height: 30px !important;
+	font-size: 16px !important;
+	
+}
+
+.end_span{
+	color: #fff !important;
+	background-color: black !important;
+	font-size: 30px;
+	font-weight: 700;
+	text-align: center !important; 
 }
 
 .buyList_header, .confirmR_header, .cartList_header, .page_header{
@@ -46,6 +69,21 @@ h4{
       url('/css/images/login_header.jpg');	
 }
 
+/* d이미지 */
+.check_img{
+	width: 40px;
+	text-align: center !important;
+}
+
+.check_img_box{
+	margin: 120px 0px 26px 0px !important;
+		text-align: center !important;
+}
+
+.end_span_box{
+			text-align: center !important;
+}
+
 
 /* 콘텐츠 상단-네이밍 */
 .comeText {
@@ -68,6 +106,30 @@ h4{
     font-weight: bold !important;
     font-size : 16px !important;
     height: 50px !important;
+}
+
+.btn_text{
+	font-size: 16px !important;
+	line-height: 30px !important;
+	margin : 0 !important;
+	font-weight: 500;
+	font-family: Noto Sans KR', sans-serif;
+}
+
+.user-back-btn{
+	width : 120px !important;  
+	height: 50px !important;
+	background-color: #fff !important;
+	border: 1px solid black !important;
+	border-radius: 5px !important;
+}
+
+.user-submit-btn{
+	width : 120px !important;  
+	height: 50px !important;	
+	background-color: black !important;
+	color: #fff !important;
+	font-weight: 900 !important;
 }
 
 /* 원본 */
