--- a/WebContent/css/notice.css
+++ b/WebContent/css/notice.css
@@ -16,11 +16,23 @@
 
 .page_header{
    max-width: 100%;
-   height: 200px;
+   height: 300px;
    background-size: cover;
    background-position: 0%;
-   margin-bottom: 80px;
+   margin-bottom: 100px;
 }
+
+/* 검색 부분수정 */
+
+#searchForm{
+	margin-top: 30px !important;
+}
+#searchForm > select, input{
+	height: 38px !important;
+	margin-top: 5px !important;
+}
+
+/* 검색 부분 수정 끝 */
 
 .btn_box{
 	text-align: center !important;
@@ -30,7 +42,7 @@
    font-size: 30px;
    color: #fff;
    font-weight: 900;
-   line-height: 200px;
+   line-height: 300px;
    text-align: center;
 }
 
@@ -63,10 +75,17 @@ a:hover{
     color: white !important;
 }
 
-.searchBtn, .modifyBtn, .resetBtn {
+.searchBtn{
+
+	margin-left: 5px;
+	background-color: #000 !important;
+    color: white !important;
+}
+
+.modifyBtn, .resetBtn {
 	margin-top: 5px;
 	margin-left: 5px;
-	background-color: rgba(0, 0, 0, 0.5) !important;
+	background-color: #000 !important;
     color: white !important;
 }
 
