--- a/WebContent/css/subpage.css
+++ b/WebContent/css/subpage.css
@@ -32,11 +32,21 @@
 button{
     width: 345px;
     height: 50px;
+    border-radius: 5px !important;
+    background-color: #fff !important;    
 
 }
 button:hover{
-    background-color: black;
-    color: #ffffff;
+    background-color: black !important;
+
+}
+
+button > a{
+	color: #000 !important;
+}
+
+button:hover > a{
+    color: #ffffff !important;
 }
 
 h1{
