--- a/WebContent/css/subpage.css
+++ b/WebContent/css/subpage.css
@@ -2,7 +2,6 @@
 .li_1{
 /*     width: 1439px; */
 /*     height: 546px;  */
-    text-align: center;
     margin: 0 auto;   
 
 }
@@ -79,21 +78,26 @@ h3{
 
  }
  h4{
- 	height: 90px ;
+ 	height: 70px ;
+ 	font-size: 18px !important;
  }
- main{
-    /* width: 1441px; height: 2394px;
-    border: 1px solid lightblue; */
-   
-    
-}  
+ 
+ 
+/*  main{
+    width: 1441px; height: 2394px;
+    border: 1px solid lightblue;     
+}   */
 
 .group{
     /* padding-top: 100px; */
-    padding-bottom: 200px;
+    padding-bottom: 100px;
    
 }
 
 img{
 	width: 100%;
+}
+
+element.style {
+    margin-bottom: 130px !important;
 }
