--- a/WebContent/css/userC.css
+++ b/WebContent/css/userC.css
@@ -22,7 +22,7 @@
    background-position: 0%;
    margin-bottom: 100px;
 	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url('/css/images/login_header.jpg') !important;
+      url('/css/images/new_york.jpg') !important;
     margin-bottom: 20px !important;
 }
 
