--- a/WebContent/css/notice.css
+++ b/WebContent/css/notice.css
@@ -11,7 +11,7 @@
 
 .page_header{
 	   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url('/css/images/login_header.jpg');	
+      url('/css/images/bridgeM.jpg')!important ;
 }
 
 .page_header{
@@ -19,7 +19,7 @@
    height: 300px;
    background-size: cover;
    background-position: 0%;
-   margin-bottom: 100px;
+   margin-bottom: 200px;
 }
 
 /* 검색 부분수정 */
